--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,17 +39,20 @@ if (WIN32)
 		target_link_libraries(${libgimli_TARGET_NAME} ${Boost_SYSTEM_LIBRARIES})
 	endif (Boost_SYSTEM_FOUND)
 
-	file(COPY ${BLAS_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
-	if (LAPACK_LIBRARIES)
-		file(COPY ${LAPACK_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
-	endif()
 	file(COPY ${Boost_THREAD_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
 	file(COPY ${Boost_SYSTEM_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
 
-	install(PROGRAMS ${BLAS_LIBRARIES} DESTINATION bin)
-	install(PROGRAMS ${LAPACK_LIBRARIES} DESTINATION bin)
 	install(PROGRAMS ${Boost_THREAD_LIBRARIES} DESTINATION bin)
 	install(PROGRAMS ${Boost_SYSTEM_LIBRARIES} DESTINATION bin)
+
+	if(${BLAS_LIBRARIES})
+		file(COPY ${BLAS_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+		if (LAPACK_LIBRARIES)
+			file(COPY ${LAPACK_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+		endif()
+		install(PROGRAMS ${BLAS_LIBRARIES} DESTINATION bin)
+		install(PROGRAMS ${LAPACK_LIBRARIES} DESTINATION bin)
+	endif(${BLAS_LIBRARIES})
 
 elseif (UNIX AND NOT APPLE)
     target_link_libraries(${libgimli_TARGET_NAME} ${CMAKE_DL_LIBS})
