--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,14 +1,15 @@
 
-ADD_CUSTOM_TARGET(pygimlisrc ALL)
+ADD_CUSTOM_TARGET(pggen ALL)
 ADD_CUSTOM_COMMAND(
     COMMAND 
         ${PYTHON_EXECUTABLE}
     ARGS 
         ${CMAKE_CURRENT_SOURCE_DIR}/generate_pygimli_code.py
     TARGET
-        pygimlisrc
+        pggen
     DEPENDS 
-        ${CMAKE_CURRENT_SOURCE_DIR}/generate_pygimli_code.py ${CMAKE_CURRENT_SOURCE_DIR}/pygimli.h
+        #${CMAKE_CURRENT_SOURCE_DIR}/generate_pygimli_code.py 
+        #${CMAKE_CURRENT_SOURCE_DIR}/pygimli.h
    )
 
 #HACK!! but we need this to force cmake looking for our generated binding files
@@ -20,25 +21,36 @@ ADD_CUSTOM_COMMAND(
         fixpygimlisrc
    )
 
-ADD_CUSTOM_TARGET(buildpygimli ALL)
+ADD_CUSTOM_TARGET(pgbuild ALL)
 ADD_CUSTOM_COMMAND(
     COMMAND 
         make -j4 -C ${CMAKE_CURRENT_BINARY_DIR} pg
     TARGET
-        buildpygimli
+        pgbuild
    )
 
 file (WRITE ${CMAKE_CURRENT_BINARY_DIR}/generated/dummy.cpp "")
 
+
+# if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX)
+#     set (EXTRA_OPTIONS "-Wno-uninitialized -Wno-reorder 
+#                         -Wno-unused-but-set-variable") 
+#     
+#     set_source_files_properties(${SOURCE_FILES}
+#         PROPERTIES 
+#         COMPILE_FLAGS  "${EXTRA_OPTIONS}")
+# endif()
+
 add_python_module(pygimli "${CMAKE_CURRENT_BINARY_DIR}/generated/" "gimli" "${CMAKE_CURRENT_SOURCE_DIR}/pygimli/")
 
-add_dependencies(fixpygimlisrc pygimlisrc)
-add_dependencies(buildpygimli fixpygimlisrc)
-add_dependencies(pygimli buildpygimli)
+add_dependencies(pggen gimli)
+add_dependencies(fixpygimlisrc pggen)
+add_dependencies(pgbuild fixpygimlisrc)
+add_dependencies(pygimli pgbuild)
 
 # for calling the build only
 ADD_CUSTOM_TARGET(pg ALL)
-add_dependencies(pygimlisrc pg)
+#add_dependencies(pg pgbuild)
 add_dependencies(pg _pygimli_)
 
 set(SCRIPTS pytripatch.py; meshmerge.py; meshconvert.py; pygi; datamerge.py)
