docstring clean-up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,7 +218,7 @@ export(TARGETS gimli
 ################################################################################
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "GIMLi")
 set(CPACK_PACKAGE_VENDOR ${PACKAGE_AUTHORS})
-set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/doc/gimli.rst")
+set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.rst")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING")
 set(CPACK_PACKAGE_VERSION_MAJOR "${GIMLI_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${GIMLI_VERSION_MINOR}")
