--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,15 +108,15 @@ ENDIF(WIN32)
 
 set(Python_ADDITIONAL_VERSIONS 3.3 3.2 2.7)
 find_package(PythonInterp)
-if (win32)
+if (WIN32)
 	get_filename_component(PYTHONPATH "${PYTHON_EXECUTABLE}" PATH )
 	set (PYTHON_LIBRARY ${PYTHONPATH}/libs/python${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR}.lib)
 	set (PYTHON_INCLUDE_DIR ${PYTHONPATH}/include)
 else()
 	set(Python_ADDITIONAL_VERSIONS ${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR})
 	set(PythonLibs_FIND_VERSION ${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR})
-	find_package(PythonLibs)
 endif()
+find_package(PythonLibs)
 find_package(Boost 1.46.0 COMPONENTS python )
 
 find_package(gccxml)
