--- a/tests/unittest/CMakeLists.txt
+++ b/tests/unittest/CMakeLists.txt
@@ -20,6 +20,7 @@ endif (CHOLMOD_FOUND)
 
 target_link_libraries(gimliUnitTest ${Boost_THREAD_LIBRARY})
 target_link_libraries(gimliUnitTest gimli)
+target_link_libraries(gimliUnitTest pthread)
 target_link_libraries(gimliUnitTest ${CHOLMOD_LIBRARIES})
 
 add_test(unitTest unittest.sh)
