--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,8 @@ find_package(PythonLibs)
 
 find_python_module(numpy)
 
+#message(${numpy_FOUND})
+
 find_package(Boost 1.46.0 COMPONENTS python)
 
 find_package(gccxml)
@@ -144,8 +146,16 @@ if (PYTHON_EXECUTABLE AND PYTHONLIBS_FOUND AND GCCXML_EXECUTABLE
     message (STATUS "pygimli can be build.")
     message (STATUS "boost_python:" ${Boost_PYTHON_LIBRARIES})
 else()
+    message(STATUS "PYTHON_EXECUTABLE: ${PYTHON_EXECUTABLE}" )
+    message(STATUS "PYTHONLIBS_FOUND: ${PYTHONLIBS_FOUND}" )
+    message(STATUS "GCCXML_EXECUTABLE: ${GCCXML_EXECUTABLE}" )
+    message(STATUS "PYPLUSPLUS_FOUND: ${PYPLUSPLUS_FOUND}" )
+    message(STATUS "Boost_PYTHON_LIBRARIES: ${Boost_PYTHON_LIBRARIES}" )
+    message(STATUS "numpy_FOUND: ${numpy_FOUND}" )
+
     message (STATUS "pygimli cannot be build due to some missing packages. 
 Check above for python, gccxml, pygccxml, pyplusplus, boost_python, numpy")
+    
 endif ()
 
 configure_file ("${PROJECT_SOURCE_DIR}/config.cmake.h.in" "${PROJECT_BINARY_DIR}/config.cmake.h" )
