remove utf8 BOM from shape.cpp

--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -22,6 +22,8 @@
 
 #define CHOLMOD_FOUND @CHOLMOD_FOUND@
 
+#define UMFPACK_FOUND @UMFPACK_FOUND@
+
 #define USE_IPC @USE_IPC@
 
 #define READPROC_FOUND @READPROC_FOUND@
