--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,11 @@ if (CHOLMOD_FOUND)
     target_link_libraries(${libgimli_TARGET_NAME} ${CHOLMOD_LIBRARIES})
 endif (CHOLMOD_FOUND)
 
+if (UMFPACK_FOUND)
+    include_directories(${UMFPACK_INCLUDE_DIRS})
+    target_link_libraries(${libgimli_TARGET_NAME} ${UMFPACK_LIBRARIES})
+endif (UMFPACK_FOUND)
+
 if (Boost_THREAD_FOUND)
     target_link_libraries(${libgimli_TARGET_NAME} ${Boost_THREAD_LIBRARIES})
 endif (Boost_THREAD_FOUND)
